Fixed all node attachment points, big overhaul of basically everything. Added a Lunar version of the dragon 2. Added Dragon XL (WIP).

--- a/GameData/ROCapsules/PartConfigs/Dragon/DECQ/DragonChute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/DECQ/DragonChute.cfg
@@ -18,22 +18,24 @@ PART
 	scale = 1.0
 	rescaleFactor = 1.0
 
-	node_stack_Chute = 0.0, 1.4855, -1.2175, 0.0, 1.0, 0.0, 1
+	node_stack_Chute = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 1
 
-	attachRules = 1,0,1,1,0
+	CoMOffset = 0.0, 0.0, 1.12
+
+	attachRules = 1,0,1,0,0
 
 	//  ============================================================================
 	//  Title, Description, Category, Techs
 	//  ============================================================================
 
-	TechRequired = unlockParts
-	entryCost = 1
-	cost = 150
+	TechRequired = landing
+	entryCost = 4600
+	cost = 850
 	category = Utility
 	subcategory = 0
 	title = Cargo Dragon Parachute
 	manufacturer = SpaceX
-	description = Cargo Dragon Parachute
+	description = Cargo Dragon Parachute.
 	tags = Spacex, Dragon, CRS
 	bulkheadProfiles = size2
 
@@ -47,8 +49,8 @@ PART
 	dragModelType = default
 	angularDrag = 0.1
 	crashTolerance = 10
-	maxTemp = 673.15
-	skinMaxTemp = 773.15
+	maxTemp = 973.15
+	skinMaxTemp = 973.15
 	emissiveConstant = 0.7
 	breakingForce = 100
 	breakingTorque = 50
@@ -62,34 +64,16 @@ PART
 	//  Modules and Resources
 	//  ============================================================================
 
-	MODULE:NEEDS[!RealChute]
-	{
-		name = ModuleParachute
-		invertCanopy = true
-		autoCutSpeed = 0.5
-		capName = CANOPY
-		canopyName = chute
-		semiDeployedAnimation = SEMI
-		fullyDeployedAnimation = FULL
-		stowedDrag = 0.12
-		semiDeployedDrag = 5
-		fullyDeployedDrag = 10
-		minAirPressureToOpen = 0.01
-		clampMinAirPressure = 0.01
-		deployAltitude = 1500
-		deploymentSpeed = 0.25
-		semiDeploymentSpeed = 0.5
-		chuteMaxTemp = 673.15
-		chuteThermalMassPerArea = 0.08
-	}
-
-	MODULE:NEEDS[RealChute]
+	MODULE
 	{
 		name = RealChuteModule
 		caseMass = 0.05
+		timer = 0
 		mustGoDown = True
 		spareChutes = 0
 		cutSpeed = 0.5
+		invertCanopy = false
+		reverseOrientation = false
 
 		PARACHUTE
 		{
@@ -100,10 +84,10 @@ PART
 			material = Nylon
 			minIsPressure = False
 			minPressure = 0.01
-			preDeployedDiameter = 4
+			preDeployedDiameter = 5
 			preDeploymentSpeed = 2.5
 			minDeployment = 3500
-			deployedDiameter = 55
+			deployedDiameter = 50
 			deploymentSpeed = 5.0
 			deploymentAlt = 1500
 			cutAlt = -1
@@ -147,14 +131,14 @@ PART
 	{
 		name = ModuleDragModifier
 		dragCubeName = SEMIDEPLOYED
-		dragModifier = 0.5
+		dragModifier = 1
 	}
 
 	MODULE
 	{
 		name = ModuleDragModifier
 		dragCubeName = DEPLOYED
-		dragModifier = 25
+		dragModifier = 2
 	}
 }
 
