--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2Chute1.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2Chute1.cfg
@@ -22,20 +22,20 @@
 
 	CoMOffset = 0.0, 0.0, 1.557307
 
-	attachRules = 1,0,1,1,0
+	attachRules = 1,0,1,0,0
 
 	//  ============================================================================
 	//  Title, Description, Category, Techs
 	//  ============================================================================
 
-	TechRequired = unlockParts
-	entryCost = 1
-	cost = 150
+	TechRequired = landing
+	entryCost = 4600
+	cost = 850
 	category = Utility
 	subcategory = 0
 	title = Crew Dragon Parachute
 	manufacturer = SpaceX
-	description = Crew Dragon Parachute
+	description = Crew Dragon Parachute.
 	tags = Spacex, Dragon, Crew
 	bulkheadProfiles = size2
 
@@ -49,8 +49,8 @@
 	dragModelType = default
 	angularDrag = 0.1
 	crashTolerance = 10
-	maxTemp = 673.15
-	skinMaxTemp = 773.15
+	maxTemp = 973.15
+	skinMaxTemp = 973.15
 	emissiveConstant = 0.7
 	breakingForce = 100
 	breakingTorque = 50
@@ -64,34 +64,15 @@
 	//  Modules and Resources
 	//  ============================================================================
 
-	MODULE:NEEDS[!RealChute]
-	{
-		name = ModuleParachute
-		invertCanopy = true
-		autoCutSpeed = 0.5
-		capName = main_package
-		canopyName = mainChute_pivot
-		semiDeployedAnimation = KK_SpXCD_mains_semi
-		fullyDeployedAnimation = KK_SpXCD_mains_fully
-		stowedDrag = 0.12
-		semiDeployedDrag = 5
-		fullyDeployedDrag = 10
-		minAirPressureToOpen = 0.01
-		clampMinAirPressure = 0.01
-		deployAltitude = 1500
-		deploymentSpeed = 0.25
-		semiDeploymentSpeed = 0.5
-		chuteMaxTemp = 673.15
-		chuteThermalMassPerArea = 0.08
-	}
-
-	MODULE:NEEDS[RealChute]
+	MODULE
 	{
 		name = RealChuteModule
 		caseMass = 0.25
 		mustGoDown = True
 		spareChutes = 0
 		cutSpeed = 0.5
+		invertCanopy = false
+		reverseOrientation = false
 
 		PARACHUTE
 		{
@@ -102,10 +83,10 @@
 			material = Nylon
 			minIsPressure = False
 			minPressure = 0.01
-			preDeployedDiameter = 4
+			preDeployedDiameter = 5
 			preDeploymentSpeed = 2.5
 			minDeployment = 3500
-			deployedDiameter = 55
+			deployedDiameter = 50
 			deploymentSpeed = 5.0
 			deploymentAlt = 1500
 			cutAlt = -1
@@ -149,14 +130,14 @@
 	{
 		name = ModuleDragModifier
 		dragCubeName = SEMIDEPLOYED
-		dragModifier = 0.5
+		dragModifier = 1
 	}
 
 	MODULE
 	{
 		name = ModuleDragModifier
 		dragCubeName = DEPLOYED
-		dragModifier = 25
+		dragModifier = 2
 	}
 }
 
