--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2Cover1.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2Cover1.cfg
@@ -23,7 +23,7 @@ PART
 
 	CoMOffset = 0.0, 0.0, 1.5
 
-	attachRules = 1,0,1,1,0
+	attachRules = 1,0,1,0,0
 
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 	sound_decoupler_fire = decouple
@@ -37,9 +37,9 @@ PART
 	cost = 100
 	category = Aero
 	subcategory = 0
-	title = Crew Dragon Main Cover
+	title = Crew Dragon Main Chute Cover
 	manufacturer = SpaceX
-	description = Crew Dragon Main Cover
+	description = Crew Dragon Main Chute Cover.
 	tags = Spacex, Dragon, Crew
 	bulkheadProfiles = size1
 
@@ -55,8 +55,8 @@ PART
 	minimum_drag = 0.15
 	angularDrag = 2
 	crashTolerance = 12
-	maxTemp = 673.15
-	skinMaxTemp = 773.15
+	maxTemp = 800
+	skinMaxTemp = 3600
 	fuelCrossFeed = True
 	stagingIcon = DECOUPLER_HOR
 	stageOffset = 1
