--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2DP.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2DP.cfg
@@ -18,11 +18,10 @@ PART
 	scale = 1.0
 	rescaleFactor = 1.0
 
-	node_stack_top = 0.0, 0.128517, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_bottom = 0.0, -0.169303, 0.0, 0.0, -1.0, 0.0, 1
-	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0
+	node_stack_top = 0.0, 0.105, 0.0, 0.0, 1.0, 0, 1
+	node_stack_bottom = 0.0, -0.169303, 0.0, 0.0, -1.0, 0, 1
 
-	attachRules = 1,1,1,1,0
+	attachRules = 1,0,1,0,0
 
 	//  ============================================================================
 	//  Title, Description, Category, Techs
@@ -51,8 +50,8 @@ PART
 	breakingForce = 250
 	breakingTorque = 250
 	crashTolerance = 12
-	maxTemp = 473.15
-	skinMaxTemp = 473.15
+	maxTemp = 973.15
+	skinMaxTemp = 973.15
 	stagingIcon = DECOUPLER_VERT
 
 	//  ============================================================================
@@ -71,13 +70,13 @@ PART
 	MODULE
 	{
 		name = ModuleDockingNode
-		referenceAttachNode = top
+		referenceAttachNode = dockingNode
 		nodeType = NASADock
 		gendered = False
 		acquireForce = 0.5
 		acquireMinFwdDot = 0.8
 		acquireminRollDot = -3.40282347E+38
-		acquireRange = 0.25
+		acquireRange = 0.5
 		acquireTorque = 0.5
 		captureMaxRvel = 0.1
 		captureMinFwdDot = 0.998
