--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2HS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2HS.cfg
@@ -34,9 +34,9 @@
 	scale = 1.0
 	rescaleFactor = 1.0
 
-	CoPOffset = 0.0, 4.0, 0.0
-	CoLOffset = 0.0, -0.5, 0.0
-	CenterOfDisplacement = 0.0, 2.0, 0.0
+	CoPOffset = 0.0, 1.0, 0.0
+	CoLOffset = 0.0, -0.50, 0.0
+	CoMOffset = 0.0, 0.0, 0.0
 
 	attachRules = 1,0,1,0,0
 
@@ -67,8 +67,6 @@
 	breakingForce = 200
 	breakingTorque = 200
 	crashTolerance = 12
-	maxTemp = 773.15
-	skinMaxTemp = 2773.15
 	fuelCrossFeed = False
 	PhysicsSignificance = 0
 	stageOffset = 1
@@ -86,19 +84,4 @@
 	//  ============================================================================
 	//  Modules and Resources
 	//  ============================================================================
-
-	MODULE
-	{
-		name = ModuleLiftingSurface
-		useInternalDragModel = False
-		deflectionLiftCoeff = 2.0
-		liftingSurfaceCurve = CapsuleBottom
-		disableBodyLift = False
-		omnidirectional = False
-		perpendicularOnly = True
-		transformDir = Y
-		transformSign = -1
-		nodeEnabled = True
-		attachNodeName = bottom
-	}
 }
