--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonCap.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonCap.cfg
@@ -17,11 +17,9 @@ PART
 	}
 
 	scale = 1.0
-	rescaleFactor = 1.5646
-
-	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0
-
-	CenterOfDisplacement = 0.0, 0.2, 0.0
+	rescaleFactor = 1.5
+	
+	node_stack_bottom = 0.0, 0.266667, 0.0, 0.0, -1.0, 0.0, 2
 
 	attachRules = 1,0,1,0,0
 
@@ -37,9 +35,9 @@ PART
 	cost = 100
 	category = Aero
 	subcategory = 0
-	title = Cargo Dragon Nose Fairing
+	title = Cargo Dragon Nose Cone
 	manufacturer = SpaceX
-	description = A blunt nose cone to be fitted atop of a DragonRider spacecraft to both protect the docking system and make it more aerodynamic.
+	description = A blunt nose cone to be fitted atop of the Cargo Dragon spacecraft to both protect the docking system and make it more aerodynamic.
 	tags = Spacex, Dragon, CRS
 	bulkheadProfiles = size1
 
@@ -55,8 +53,8 @@ PART
 	crashTolerance = 14
 	breakingForce = 100
 	breakingTorque = 100
-	maxTemp = 573.15
-	skinMaxTemp = 673.15
+	maxTemp = 773.15
+	skinMaxTemp = 773.15
 	fuelCrossFeed = False
 	stagingIcon = DECOUPLER_HOR
 	stageOffset = 1
@@ -69,7 +67,7 @@ PART
 	MODULE
 	{
 		name = ModuleDecouple
-		ejectionForce = 20
+		ejectionForce = 10
 		explosiveNodeID = bottom
 	}
 }
