--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonDP.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonDP.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = ROC-DragonAdaptor
+	name = ROC-DragonDP
 	module = Part
 	author = -ctn-, Vader111
 
@@ -12,41 +12,38 @@ PART
 
 	MODEL
 	{
-		model = ROCapsules/Assets/PhoenixIndustries/DragonADAPTER
-		scale = 1.0, 1.0, 1.0
+		model = ROCapsules/Assets/PhoenixIndustries/DragonDP
+		scale = 0.86, 0.86, 0.86
 	}
 
 	scale = 1.0
 	rescaleFactor = 1.5
 
-	node_stack_top = 0.0, 0.006667, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_bottom = 0.0, -0.15006, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_top = 0.0, 0.08, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_bottom = 0.0, -0.06, 0.0, 0.0, -1.0, 0.0, 2
 
-	attachRules = 1,0,1,0,0
-
-	fx_gasBurst_white = 0.0, 0.14, 0.0, 0.0, 1.0, 0.0, decouple
-	sound_decoupler_fire = decouple
+	attachRules = 1,0,1,0,1
 
 	//  ============================================================================
 	//  Title, Description, Category, Techs
 	//  ============================================================================
 
-	TechRequired = advAerodynamics
-	entryCost = 1500
-	cost = 100
-	category = Aero
+	TechRequired = advMetalworks
+	entryCost = 7500
+	cost = 350
+	category = Coupling
 	subcategory = 0
-	title = Cargo Dragon Vehicle Adapter
+	title = Cargo Dragon Capsule Docking Port
 	manufacturer = SpaceX
-	description = A simple piece of composite and metal for which the Dragon Trunk can be seamlessly attached and detached to it's launch vehicle.
+	description = Cargo Dragon Capsule Docking Port.
 	tags = Spacex, Dragon, CRS
-	bulkheadProfiles = size1
+	bulkheadProfiles = size1, srf
 
 	//  ============================================================================
 	//  Thermo, Durability
 	//  ============================================================================
 
-	mass = 0.2
+	mass = 0.1
 	dragModelType = default
 	breakingForce = 250
 	breakingTorque = 250
@@ -54,12 +51,9 @@ PART
 	minimum_drag = 0.15
 	angularDrag = 2
 	crashTolerance = 12
-	maxTemp = 773.15
-	skinMaxTemp = 773.15
-	fuelCrossFeed = False
-	stagingIcon = DECOUPLER_HOR
-	stageOffset = 1
-	childStageOffset = 1
+	maxTemp = 973.15
+	skinMaxTemp = 973.15
+	fuelCrossFeed = True
 
 	//  ============================================================================
 	//  Modules and Resources
@@ -67,9 +61,20 @@ PART
 
 	MODULE
 	{
-		name = ModuleDecouple
-		ejectionForce = 50
-		isOmniDecoupler = false
-		explosiveNodeID = top
+		name = ModuleDockingNode
+		referenceAttachNode = dockingNode
+		nodeType = CBM
+		acquireForce = 0.5
+		acquireMinFwdDot = 0.8
+		acquireminRollDot = -3.40282347E+38
+		acquireRange = 0.25
+		acquireTorque = 0.5
+		captureMaxRvel = 0.1
+		captureMinFwdDot = 0.998
+		captureMinRollDot = -3.40282347E+38
+		captureRange = 0.05
+		minDistanceToReEngage = 0.25
+		undockEjectionForce = 0.1
+		stagingEnabled = False
 	}
 }
