--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonHS.cfg
@@ -17,15 +17,16 @@ PART
 	}
 
 	scale = 1.0
-	rescaleFactor = 1.5
+	rescaleFactor = 1.4354
 
-	node_stack_bottom = 0.0, -0.07, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_top = 0.0, 0.025, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_top = 0.0, 0.001742, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_bottom = 0.0, -0.070134, 0.0, 0.0, -1.0, 0.0, 2
 
 	CoPOffset = 0.0, 1.0, 0.0
-	CoLOffset = 0.0, -0.15, 0.0
+	CoLOffset = 0.0, -0.50, 0.0
+	CoMOffset = 0.0, 0.0, 0.0
 
-	attachRules = 1,0,1,0,0
+	attachRules = 1,0,1,0,1
 
 	//  ============================================================================
 	//  Title, Description, Category, Techs
@@ -54,8 +55,6 @@ PART
 	breakingForce = 200
 	breakingTorque = 200
 	crashTolerance = 12
-	maxTemp = 773.15
-	skinMaxTemp = 2773.15
 	fuelCrossFeed = False
 	PhysicsSignificance = 0
 	stageOffset = 1
@@ -73,19 +72,4 @@ PART
 	//  ============================================================================
 	//  Modules and Resources
 	//  ============================================================================
-
-	MODULE
-	{
-		name = ModuleLiftingSurface
-		useInternalDragModel = False
-		deflectionLiftCoeff = 2.0
-		liftingSurfaceCurve = CapsuleBottom
-		disableBodyLift = False
-		omnidirectional = False
-		perpendicularOnly = True
-		transformDir = Y
-		transformSign = -1
-		nodeEnabled = True
-		attachNodeName = bottom
-	}
 }
