--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonSM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonSM.cfg
@@ -17,17 +17,17 @@ PART
 	}
 
 	scale = 1.0
-	rescaleFactor = 1.5646
+	rescaleFactor = 1.5
 
-	node_stack_top = 0.0, 0.6, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_bottom = 0.0, -1.2, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_trunk = 0.0, 0.5401, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_solarattach1 = -0.9907, -0.2493, -0.064, 0.0, 1.0, 0.0, 2
-	node_stack_solarattach2 = 0.9907, -0.2493, -0.064, 0.0, -1.0, 0.0, 2
-	node_stack_fairingattach1 = -1.1504, 0.588, 0, 0.0, 1.0, 0.0, 2
-	node_stack_fairingattach2 = 1.1504, 0.588, 0, 0.0, 1.0, 0.0, 2
+	node_stack_top = 0.0, 0.766667, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_bottom = 0.0, -1.25334, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_trunk = 0.0, 0.56336, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_solarattach1 = -1, -0.260033, -0.066753, 0.0, 1.0, 0.0, 2
+	node_stack_solarattach2 = 1, -0.260033, -0.066753, 0.0, -1.0, 0.0, 2
+	node_stack_fairingattach1 = -1.14667, 0.61332, 0, 0.0, 1.0, 0.0, 2
+	node_stack_fairingattach2 = 1.14667, 0.61332, 0, 0.0, 1.0, 0.0, 2
 
-	attachRules = 1,0,1,1,1
+	attachRules = 1,0,1,0,1
 
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 	sound_decoupler_fire = decouple
@@ -43,7 +43,7 @@ PART
 	subcategory = 0
 	title = Cargo Dragon Trunk
 	manufacturer = SpaceX
-	description = The cargo trunk is quipped with a small battery and decoupler to detach a small payload from inside. Designed to have two solar panels with solar panel covers attached to it in pairs.
+	description = A roomy cargo container designed to hold unpressurized payloads. Designed to have two solar panels with solar panel covers attached to it in pairs. <b><color=#f1ca16>Includes a Attachment Node Inside The Trunk (Requires a Decoupler)</color></b>
 	tags = Spacex, Dragon, CRS
 	bulkheadProfiles = size1, size3
 
@@ -59,8 +59,8 @@ PART
 	crashTolerance = 10
 	breakingForce = 250
 	breakingTorque = 250
-	maxTemp = 473.15
-	skinMaxTemp = 573.15
+	maxTemp = 773.15
+	skinMaxTemp = 773.15
 	fuelCrossFeed = True
 	emissiveConstant = 0.90
 	heatConductivity = 0.75
@@ -81,23 +81,6 @@ PART
 
 	MODULE
 	{
-		name = ModuleDecouple
-		ejectionForce = 10
-		explosiveNodeID = trunk
-	}
-	
-	MODULE
-	{
-		name = ModuleAnimateGeneric
-		animationName = dragonTrunkLight
-		defaultActionGroup = Light
-		actionGUIName = Toggle Lights
-		startEventGUIName = Lights On
-		endEventGUIName = Lights Off
-	}
-
-	MODULE
-	{
 		name = ModuleFuelTanks
 		volume = 25
 		type = ServiceModule
@@ -107,6 +90,7 @@ PART
 			name = ElectricCharge
 			amount = 25000
 			maxAmount = 25000
+			isTweakable = False
 		}
 	}
 }
