--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonSP.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonSP.cfg
@@ -17,12 +17,12 @@ PART
 	}
 
 	scale = 1.0
-	rescaleFactor = 1.5646
+	rescaleFactor = 1.5
 
-	node_attach = 0.0, 0.05, 0.0, 0.0, -1.0, 0.0
+	node_attach = 0.0, 0.05, 0.0, 0.0, -1.0, 0.0, 2
 	node_stack_solarattach = 0.0, 0.0, 0.0, -1.0, 0.0, 0.0, 2
 
-	attachRules = 1,1,0,0,1
+	attachRules = 1,1,1,0,1
 
 	//  ============================================================================
 	//  Title, Description, Category, Techs
@@ -51,7 +51,8 @@ PART
 	crashTolerance = 8
 	breakingForce = 250
 	breakingTorque = 250
-	maxTemp = 1200
+	maxTemp = 773.15
+	skinMaxTemp = 773.15
 	thermalMassModifier = 2.0
 	emissiveConstant = 0.95
 	heatConductivity = 0.04
