--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/TU_Support_CargoDragon.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/TU_Support_CargoDragon.cfg
@@ -9,12 +9,40 @@
 
 KSP_MODEL_SHADER
 {
-	name = ROC-CargoDragon
+	name = ROC-CargoDragon1
+
+		model = ROCapsules/Assets/DECQ/Dragon/DragonCHUTE
+		model = ROCapsules/Assets/PhoenixIndustries/DragonCAP
+		model = ROCapsules/Assets/PhoenixIndustries/DragonCM
+		model = ROCapsules/Assets/PhoenixIndustries/DragonDP
+
+	MATERIAL
+	{
+		shader = TU/Metallic
+
+		PROPERTY
+		{
+			name = _Color
+			color = 1.5, 1.5, 1.5
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.25
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.25
+		}
+	}
+}
+
+KSP_MODEL_SHADER
+{
+	name = ROC-CargoDragon2
 
 		model = ROCapsules/Assets/PhoenixIndustries/DragonADAPTER
-		model = ROCapsules/Assets/PhoenixIndustries/DragonCAP
-		model = ROCapsules/Assets/PhoenixIndustries/DragonCHUTE
-		model = ROCapsules/Assets/PhoenixIndustries/DragonCM
 		model = ROCapsules/Assets/PhoenixIndustries/DragonSC
 		model = ROCapsules/Assets/PhoenixIndustries/DragonSM
 		model = ROCapsules/Assets/PhoenixIndustries/DragonSP
