--- a/GameData/ROCapsules/PartConfigs/DragonXL/PhoenixIndustries Dragon/DragonXLSP.cfg
+++ b/GameData/ROCapsules/PartConfigs/DragonXL/PhoenixIndustries Dragon/DragonXLSP.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = ROC-DragonAdaptor
+	name = ROC-DragonXLSP
 	module = Part
 	author = -ctn-, Vader111
 
@@ -12,54 +12,50 @@ PART
 
 	MODEL
 	{
-		model = ROCapsules/Assets/PhoenixIndustries/DragonADAPTER
-		scale = 1.0, 1.0, 1.0
+		model = ROCapsules/Assets/PhoenixIndustries/DragonSP
+		scale = 1.9, 1.9, 1.9
 	}
 
 	scale = 1.0
 	rescaleFactor = 1.5
 
-	node_stack_top = 0.0, 0.006667, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_bottom = 0.0, -0.15006, 0.0, 0.0, -1.0, 0.0, 2
+	node_attach = 0.0, 0.05, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_solarattach = 0.0, 0.0, 0.0, -1.0, 0.0, 0.0, 2
 
-	attachRules = 1,0,1,0,0
-
-	fx_gasBurst_white = 0.0, 0.14, 0.0, 0.0, 1.0, 0.0, decouple
-	sound_decoupler_fire = decouple
+	attachRules = 1,1,1,0,1
 
 	//  ============================================================================
 	//  Title, Description, Category, Techs
 	//  ============================================================================
 
-	TechRequired = advAerodynamics
-	entryCost = 1500
-	cost = 100
-	category = Aero
+	TechRequired = spaceStationSolarPanels
+	entryCost = 3800
+	cost = 2000
+	category = Electrical
 	subcategory = 0
-	title = Cargo Dragon Vehicle Adapter
+	title = Cargo Dragon XL Solar Panel
 	manufacturer = SpaceX
-	description = A simple piece of composite and metal for which the Dragon Trunk can be seamlessly attached and detached to it's launch vehicle.
-	tags = Spacex, Dragon, CRS
-	bulkheadProfiles = size1
+	description = Large and efficient solar panel array designed to attach to Dragon XL to provide power for orbital purposes.
+	tags = Spacex, DragonXL, Gateway
+	bulkheadProfiles = srf
 
 	//  ============================================================================
 	//  Thermo, Durability
 	//  ============================================================================
 
-	mass = 0.2
+	mass = 0.3
 	dragModelType = default
+	maximum_drag = 0.2
+	minimum_drag = 0.2
+	angularDrag = 1
+	crashTolerance = 8
 	breakingForce = 250
 	breakingTorque = 250
-	maximum_drag = 0.20
-	minimum_drag = 0.15
-	angularDrag = 2
-	crashTolerance = 12
 	maxTemp = 773.15
 	skinMaxTemp = 773.15
-	fuelCrossFeed = False
-	stagingIcon = DECOUPLER_HOR
-	stageOffset = 1
-	childStageOffset = 1
+	thermalMassModifier = 2.0
+	emissiveConstant = 0.95
+	heatConductivity = 0.04
 
 	//  ============================================================================
 	//  Modules and Resources
@@ -67,9 +63,22 @@ PART
 
 	MODULE
 	{
-		name = ModuleDecouple
-		ejectionForce = 50
-		isOmniDecoupler = false
-		explosiveNodeID = top
+		name = ModuleDeployableSolarPanel
+		resourceName = ElectricCharge
+		chargeRate = 1.8
+		retractable = false
+		animationName = dragonSolar
+		raycastTransformName = sunCatcher
+		pivotName = sunPivot 
+	}
+
+	useSolarConfig = true
+	solarUseMass = false
+
+	SolarConfig
+	{
+		area = 13.3956
+		level = 7
+		type = tracking
 	}
 }
