--- a/GameData/ROCapsules/PartConfigs/DragonXL/Vader/DragonXLDP.cfg
+++ b/GameData/ROCapsules/PartConfigs/DragonXL/Vader/DragonXLDP.cfg
@@ -1,8 +1,8 @@
 PART
 {
-	name = ROC-DragonAdaptor
+	name = ROC-DragonXLDP
 	module = Part
-	author = -ctn-, Vader111
+	author = Vader111
 
 	RSSROConfig = True
 
@@ -12,54 +12,48 @@ PART
 
 	MODEL
 	{
-		model = ROCapsules/Assets/PhoenixIndustries/DragonADAPTER
+		model = ROCapsules/Assets/Vader/DragonXLDP
 		scale = 1.0, 1.0, 1.0
 	}
 
 	scale = 1.0
-	rescaleFactor = 1.5
+	rescaleFactor = 1.0
 
-	node_stack_top = 0.0, 0.006667, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_bottom = 0.0, -0.15006, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_top = 0.0, 0.217797, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_bottom = 0.0, -0.17583, 0.0, 0.0, -1.0, 0.0, 2
 
-	attachRules = 1,0,1,0,0
-
-	fx_gasBurst_white = 0.0, 0.14, 0.0, 0.0, 1.0, 0.0, decouple
-	sound_decoupler_fire = decouple
+	attachRules = 1,0,1,0,1
 
 	//  ============================================================================
 	//  Title, Description, Category, Techs
 	//  ============================================================================
 
-	TechRequired = advAerodynamics
-	entryCost = 1500
-	cost = 100
-	category = Aero
+	TechRequired = advMetalworks
+	entryCost = 7500
+	cost = 350
+	category = Coupling
 	subcategory = 0
-	title = Cargo Dragon Vehicle Adapter
+	title = Cargo Dragon XL Docking Port
 	manufacturer = SpaceX
-	description = A simple piece of composite and metal for which the Dragon Trunk can be seamlessly attached and detached to it's launch vehicle.
-	tags = Spacex, Dragon, CRS
-	bulkheadProfiles = size1
+	description = Cargo Dragon XL Docking Port.
+	tags = Spacex, DragonXL, Gateway
+	bulkheadProfiles = size1, srf
 
 	//  ============================================================================
 	//  Thermo, Durability
 	//  ============================================================================
 
-	mass = 0.2
+	mass = 0.1
 	dragModelType = default
 	breakingForce = 250
 	breakingTorque = 250
 	maximum_drag = 0.20
 	minimum_drag = 0.15
 	angularDrag = 2
-	crashTolerance = 12
+	crashTolerance = 10
 	maxTemp = 773.15
 	skinMaxTemp = 773.15
-	fuelCrossFeed = False
-	stagingIcon = DECOUPLER_HOR
-	stageOffset = 1
-	childStageOffset = 1
+	fuelCrossFeed = True
 
 	//  ============================================================================
 	//  Modules and Resources
@@ -67,9 +61,21 @@ PART
 
 	MODULE
 	{
-		name = ModuleDecouple
-		ejectionForce = 50
-		isOmniDecoupler = false
-		explosiveNodeID = top
+		name = ModuleDockingNode
+		referenceAttachNode = DockingNode
+		nodeType = NASADock
+		gendered = False
+		acquireForce = 0.5
+		acquireMinFwdDot = 0.8
+		acquireminRollDot = -3.40282347E+38
+		acquireRange = 0.5
+		acquireTorque = 0.5
+		captureMaxRvel = 0.1
+		captureMinFwdDot = 0.998
+		captureMinRollDot = -3.40282347E+38
+		captureRange = 0.05
+		minDistanceToReEngage = 0.25
+		undockEjectionForce = 0.1
+		stagingEnabled = False
 	}
 }
