--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2CMLunar.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2CMLunar.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = ROC-Dragon2CM
+	name = ROC-Dragon2CMLunar
 	module = Part
 	author = Kartoffelkuchen, Vader111
 
@@ -17,7 +17,7 @@ PART
 
 	INTERNAL
 	{
-		name = ROC-Dragon2CMInterior
+		name = ROC-Dragon2CMLunarInterior
 	}
 
 	scale = 1.0
@@ -45,14 +45,14 @@ PART
 	cost = 4500
 	category = Pods
 	subcategory = 0
-	title = Crew Dragon Capsule
+	title = Crew Dragon Capsule (Lunar)
 	manufacturer = SpaceX
-	description = SpaceX’s next-generation Dragon V2 spacecraft designed to carry humans to the International Space Station and other destinations.
-	tags = Spacex, Dragon, Crew
+	description = SpaceX’s next-generation Dragon V2 spacecraft designed to carry humans to the Moon and Back.
+	tags = Spacex, Dragon, Crew, Lunar
 
 	vesselType = Ship
 	stagingIcon = COMMAND_POD
-	CrewCapacity = 6
+	CrewCapacity = 3
 	bulkheadProfiles = size3, size1
 
 	//  ============================================================================
@@ -310,7 +310,7 @@ PART
 //  Configure RealAntennas
 //  ================================================================================
 
-@PART[ROC-Dragon2CM]:BEFORE[RealAntennas]
+@PART[ROC-Dragon2CMLunar]:BEFORE[RealAntennas]
 {
 	!MODULE[ModuleDataTransmitter],* {}
 
@@ -335,9 +335,9 @@ PART
 //	TAC Life Support compatibility.
 //	==================================================
 
-@PART[ROC-Dragon2CM]:AFTER[RealismOverhaul]:NEEDS[TacLifeSupport]
+@PART[ROC-Dragon2CMLunar]:AFTER[RealismOverhaul]:NEEDS[TacLifeSupport]
 {
-	@description ^= :$: Supports a crew of 6 for 3 days.:
+	@description ^= :$: Supports a crew of 3 for 6 days.:
 	@mass -= 0.07
 
 	@MODULE[ModuleCommand]
