--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2Chute2.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2Chute2.cfg
@@ -22,20 +22,20 @@
 
 	CoMOffset = 0.0, -1.4, 1.0
 
-	attachRules = 1,0,1,1,0
+	attachRules = 1,0,1,0,0
 
 	//  ============================================================================
 	//  Title, Description, Category, Techs
 	//  ============================================================================
 
-	TechRequired = unlockParts
-	entryCost = 1
-	cost = 150
+	TechRequired = landing
+	entryCost = 4600
+	cost = 850
 	category = Utility
 	subcategory = 0
 	title = Crew Dragon Drogue Parachute
 	manufacturer = SpaceX
-	description = Crew Dragon Drogue Parachute
+	description = Crew Dragon Drogue Parachute.
 	tags = Spacex, Dragon, Crew
 	bulkheadProfiles = size2
 
@@ -49,8 +49,8 @@
 	dragModelType = default
 	angularDrag = 0.1
 	crashTolerance = 10
-	maxTemp = 673.15
-	skinMaxTemp = 773.15
+	maxTemp = 973.15
+	skinMaxTemp = 973.15
 	emissiveConstant = 0.7
 	breakingForce = 100
 	breakingTorque = 50
@@ -64,35 +64,15 @@
 	//  Modules and Resources
 	//  ============================================================================
 
-	MODULE:NEEDS[!RealChute]
-	{
-		name = ModuleParachute
-		invertCanopy = true
-		autoCutSpeed = 0.5
-		capName = drogueChute_base
-		canopyName = drogueChute_pivot
-		semiDeployedAnimation = KK_SpXCD_drogues_semi
-		fullyDeployedAnimation = KK_SpXCD_drogues_fully
-		stowedDrag = 0.12
-		semiDeployedDrag = 5
-		fullyDeployedDrag = 100
-		minAirPressureToOpen = 0.01
-		clampMinAirPressure = 0.01
-		deployAltitude = 8000
-		deploymentSpeed = 10.0
-		semiDeploymentSpeed = 1.5
-		chuteMaxTemp = 673.15
-		machHeatMultBase = 0.5
-		chuteThermalMassPerArea = 0.08
-	}
-
-	MODULE:NEEDS[RealChute]
+	MODULE
 	{
 		name = RealChuteModule
 		caseMass = 0.075
 		mustGoDown = True
 		spareChutes = 0
 		cutSpeed = 0.5
+		invertCanopy = false
+		reverseOrientation = false
 
 		PARACHUTE
 		{
@@ -103,7 +83,7 @@
 			material = Nylon
 			minIsPressure = False
 			minPressure = 0.01
-			preDeployedDiameter = 5.0
+			preDeployedDiameter = 5
 			preDeploymentSpeed = 1.5
 			minDeployment = 8000
 			deployedDiameter = 10.0
@@ -150,14 +130,14 @@
 	{
 		name = ModuleDragModifier
 		dragCubeName = SEMIDEPLOYED
-		dragModifier = 2.5
+		dragModifier = 1
 	}
 
 	MODULE
 	{
 		name = ModuleDragModifier
 		dragCubeName = DEPLOYED
-		dragModifier = 10
+		dragModifier = 2
 	}
 }
 
