--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2SM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2SM.cfg
@@ -19,10 +19,10 @@
 	rescaleFactor = 1.0
 
 	node_stack_top = 0.0, 1.820601, 0.0, 0.0, 1.0, 0.0, 3
-	node_stack_trunk = 0.0, 1.18, 0.0, 0.0, -1.0, 0.0, 3
 	node_stack_bottom = 0.0, -1.8, 0.0, 0.0, -1.0, 0.0, 3
+	node_stack_trunk = 0.0, 1.18, 0.0, 0.0, -1.0, 0.0, 3
 
-	attachRules = 1,0,1,1,0
+	attachRules = 1,0,1,0,0
 
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 	sound_decoupler_fire = decouple
@@ -38,7 +38,7 @@
 	subcategory = 0
 	title = Crew Dragon Trunk
 	manufacturer = SpaceX
-	description = A roomy cargo container designed to hold unpressurized payloads. It also is equipped with a solar panel coating and some aerodynamic fins.
+	description = A roomy cargo container designed to hold unpressurized payloads. It also is equipped with a solar panel coating and some aerodynamic fins. <b><color=#f1ca16>Includes a Attachment Node Inside The Trunk (Requires a Decoupler)</color></b>
 	tags = Spacex, Dragon, Crew
 	bulkheadProfiles = size1, size3
 
@@ -54,8 +54,8 @@
 	crashTolerance = 10
 	breakingForce = 250
 	breakingTorque = 250
-	maxTemp = 473.15
-	skinMaxTemp = 573.15
+	maxTemp = 773.15
+	skinMaxTemp = 773.15
 	fuelCrossFeed = True
 	emissiveConstant = 0.90
 	heatConductivity = 0.75
@@ -65,14 +65,6 @@
 	//  ============================================================================
 	//  Modules and Resources
 	//  ============================================================================
-
-	MODULE
-	{
-		name = ModuleDecouple
-		ejectionForce = 10
-		isOmniDecoupler = false
-		explosiveNodeID = trunk		
-	}
 
 	MODULE:NEEDS[!AnimatedDecouplers]
 	{
@@ -113,6 +105,7 @@
 			name = ElectricCharge
 			amount = 25000
 			maxAmount = 25000
+			isTweakable = False
 		}
 	}
 
