--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonCM.cfg
@@ -17,14 +17,17 @@ PART
 	}
 
 	scale = 1.0
-	rescaleFactor = 1.5646
+	rescaleFactor = 1.5
 
-	node_stack_CAP = 0.0, 0.9364, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_Chute = 0.0, 0.95872, -0.7159, 0.0, -1.0, 0.0, 2
-	node_stack_top = 0.0, 1.1952, 0.0, 0, -1.0, 0, 2
-	node_stack_bottom = 0.0, -0.68, 0.0, 0, -1.0, 0, 2
+	node_stack_top = 0.0, 1.06263, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_bottom = 0.0, -0.709287, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_Chute = 0.0, 0.986667, -0.666667, 0.0, -1.0, 0.0, 2
 
-	attachRules = 1,0,1,0,0
+	CoPOffset = 0.0, 1.0, 0.0
+	CoLOffset = 0.0, -0.5, 0.0
+	CoMOffset = 0.0, -0.25, 0.0
+
+	attachRules = 1,0,1,0,1
 
 	//  ============================================================================
 	//  Title, Description, Category, Techs
@@ -37,7 +40,7 @@ PART
 	subcategory = 0
 	title = Cargo Dragon Capsule
 	manufacturer = SpaceX
-	description = The Dragon Capsule is equipped with six-direction Draco RCS thrusters, fuel, interior and docking lighting, opening front panels for cargo access and A PICA-X heatshield for reentry. It can be used with stacking and attachable cargo and may be used to store science data.
+	description = SpaceX’s next-generation Dragon V1 spacecraft designed to carry cargo & supplies to the International Space Station and other destinations.
 	tags = Spacex, Dragon, CRS
 
 	vesselType = Ship
@@ -49,7 +52,7 @@ PART
 	//  Thermo, Durability
 	//  ============================================================================
 
-	mass = 4
+	mass = 3.9
 	dragModelType = default
 	breakingForce = 250
 	breakingTorque = 250
@@ -57,8 +60,8 @@ PART
 	minimum_drag = 0.15
 	angularDrag = 2
 	crashTolerance = 12
-	maxTemp = 673.15
-	skinMaxTemp = 773.15
+	maxTemp = 800
+	skinMaxTemp = 3600
 	fuelCrossFeed = True
 
 	//  ============================================================================
@@ -88,7 +91,7 @@ PART
 	MODULE
 	{
 		name = AdjustableCoMShifter
-		DescentModeCoM = 0, 0, -0.15
+		DescentModeCoM = 0, 0, 0.2
 	}
 
 	MODULE
@@ -104,63 +107,18 @@ PART
 
 	MODULE
 	{
-		name = ModuleDockingNode
-		referenceAttachNode = dockingNode
-		nodeType = CBM
-		acquireForce = 0.5
-		acquireMinFwdDot = 0.8
-		acquireminRollDot = -3.40282347E+38
-		acquireRange = 0.25
-		acquireTorque = 0.5
-		captureMaxRvel = 0.1
-		captureMinFwdDot = 0.998
-		captureMinRollDot = -3.40282347E+38
-		captureRange = 0.05
-		minDistanceToReEngage = 0.25
-		undockEjectionForce = 0.1
-		stagingEnabled = False
-	}
-
-	MODULE
-	{
 		name = ModuleRCSFX
 		stagingEnabled = False
 		thrusterTransformName = rcsThrust1
 		thrusterPower = 0.4
-		resourceFlowMode = STAGE_PRIORITY_FLOW
-		runningEffectName = running1
-		PROPELLANT
-		{
-			name = MMH
-			ratio = 0.5629
-		}
-		PROPELLANT
-		{
-			name = NTO
-			ratio = 0.4371
-		}
-		atmosphereCurve
-		{
-			key = 0 300
-			key = 1 100
-			key = 4 0.001
-		}
-	}
-
-	MODULE
-	{
-		name = ModuleRCSFX
-		stagingEnabled = False
-		thrusterTransformName = rcsThrust2
-		thrusterPower = 0.4
-		enableYaw = False
-		enablePitch = False
-		enableRoll = False
-		enableX = False
-		enableY = False
+		enableYaw = True
+		enablePitch = True
+		enableRoll = True
+		enableX = True
+		enableY = True
 		enableZ = True
 		resourceFlowMode = STAGE_PRIORITY_FLOW
-		runningEffectName = running2
+		runningEffectName = running1
 		PROPELLANT
 		{
 			name = MMH
@@ -204,6 +162,7 @@ PART
 			name = ElectricCharge
 			amount = 55000
 			maxAmount = 55000
+			isTweakable = False
 		}
 	}
 
@@ -232,33 +191,6 @@ PART
 			{
 				modelName = Squad/FX/Monoprop_small
 				transformName = rcsThrust1
-				emission = 0.0 0.0
-				emission = 0.1 0.0
-				emission = 1.0 1.0
-				speed = 0.0 0.8
-				speed = 1.0 1.0
-				localRotation = -90, 0, 0
-			}
-		}
-		running2
-		{
-			AUDIO_MULTI
-			{
-				channel = Ship
-				transformName = rcsThrust2
-				clip = sound_rocket_mini
-				volume = 0.0 0.0
-				volume = 0.1 0.0
-				volume = 0.5 0.025
-				volume = 1.0 0.1
-				pitch = 0.0 0.75
-				pitch = 1.0 1.5
-				loop = true
-			}
-			MODEL_MULTI_PARTICLE
-			{
-				modelName = Squad/FX/Monoprop_small
-				transformName = rcsThrust2
 				emission = 0.0 0.0
 				emission = 0.1 0.0
 				emission = 1.0 1.0
@@ -301,7 +233,7 @@ PART
 
 @PART[ROC-DragonCM]:FOR[RealismOverhaul]:NEEDS[TacLifeSupport]
 {
-	@description ^= :$: Cargo to Support a crew of 4 for 4 days.:
+	@description ^= :$: Cargo to Support a crew of 3 for 60 days.:
 	@mass -= 0.07
 
 	@MODULE[ModuleCommand]
@@ -314,41 +246,41 @@ PART
 
 	@MODULE[ModuleFuelTanks]
 	{
-		@volume += 659
+		@volume += 3540
 
 		TANK
 		{
 			name = Food
-			amount = 250
-			maxAmount = 250
+			amount = 0
+			maxAmount = 1100
 		}
 
 		TANK
 		{
 			name = Water
-			amount = 250
-			maxAmount = 250
+			amount = 0
+			maxAmount = 700
 		}
 
 		TANK
 		{
 			name = Oxygen
-			amount = 10000
-			maxAmount = 10000
+			amount = 0
+			maxAmount = 110000
 		}
 
 		TANK
 		{
 			name = Waste
 			amount = 0
-			maxAmount = 50
+			maxAmount = 500
 		}
 
 		TANK
 		{
 			name = WasteWater
 			amount = 0
-			maxAmount = 50
+			maxAmount = 500
 		}
 
 		TANK
