--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonSC.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonSC.cfg
@@ -13,15 +13,15 @@ PART
 	MODEL
 	{
 		model = ROCapsules/Assets/PhoenixIndustries/DragonSC
-		scale = 1.0, 1.0, 1.0
+		scale = 1.025, 1.025, 1.025
 	}
 
 	scale = 1.0
-	rescaleFactor = 1.5646
+	rescaleFactor = 1.5
 
-	node_stack_bottom = 0.0, 0.767, 0.0, 0.0, -1.0, 0.0
+	node_stack_bottom = 0.0, 0.800033, 0.0, 0.0, -1.0, 0.0, 2
 
-	attachRules = 1,0,0,1,0
+	attachRules = 1,0,1,0,1
 
 	fx_gasBurst_white = 0.0, 0.0, 0.0, -1.0, 0.0, 0.0, decouple
 	sound_decoupler_fire = decouple
@@ -53,7 +53,7 @@ PART
 	minimum_drag = 0.15
 	angularDrag = 2
 	crashTolerance = 12
-	maxTemp = 673.15
+	maxTemp = 773.15
 	skinMaxTemp = 773.15
 	fuelCrossFeed = True
 	stagingIcon = DECOUPLER_HOR
@@ -67,7 +67,7 @@ PART
 	MODULE
 	{
 		name = ModuleDecouple
-		ejectionForce = 20
+		ejectionForce = 10
 		isOmniDecoupler = false
 		explosiveNodeID = bottom
 	}
