--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/Kerbalism Profile.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/Kerbalism Profile.cfg
@@ -1,53 +1,53 @@
 @PART[ROC-DragonCM]:NEEDS[RealFuels,ROCapsules]:AFTER[ROCapsules]
 {
-	@description ^= :$: Cargo to Support a crew of 4 for 4 days.:
+	@description ^= :$: Cargo to Support a crew of 3 for 60 days.:
 
 	@mass -= 0.07
 	
 	@MODULE[ModuleFuelTanks]
 	{
-		@volume += 659
+		@volume += 3540
 
 		TANK
 		{
 			name = Food
-			amount = 250
-			maxAmount = 250
+			amount = 0
+			maxAmount = 1100
 		}
 
 		TANK
 		{
 			name = Water
-			amount = 250
-			maxAmount = 250
+			amount = 0
+			maxAmount = 700
 		}
 
 		TANK
 		{
 			name = Oxygen
-			amount = 10000
-			maxAmount = 10000
+			amount = 0
+			maxAmount = 110000
 		}
 
 		TANK
 		{
 			name = Nitrogen		//No idea of actual size, assuming same 1:3 ratio Nitrogen:Oxygen Orion has
-			amount = 1000
-			maxAmount = 1000
+			amount = 0
+			maxAmount = 37000
 		}
 
 		TANK
 		{
 			name = Waste
 			amount = 0
-			maxAmount = 50
+			maxAmount = 500
 		}
 
 		TANK
 		{
 			name = WasteWater
 			amount = 0
-			maxAmount = 50
+			maxAmount = 500
 		}
 	}
 }
@@ -56,7 +56,7 @@
 {
 	@MODULE[Habitat]
 	{
-		%volume = 6
+		%volume = 10
 		%surface = 35	//guess, very similar dimensions to Orion
 		%max_pressure = 0.35
 	}
@@ -74,6 +74,7 @@
 	}
 }
 
+//Dragon Capsules
 @PART[ROC-DragonCM]:NEEDS[ProfileRealismOverhaul]:AFTER[RealismOverhaul]
 {
 	@MODULE[ModuleCommand]
@@ -83,7 +84,7 @@
 			@rate = 0.600	//Remove Climatization and LS power draw
 		}
 	}
-
+	
   MODULE
   {
     name = ProcessController
@@ -105,22 +106,21 @@
 
   @MODULE[ProcessController],*
   {
-    @capacity *= 1.67
+    @capacity *= #$/CrewCapacity$
   }
-
+ 
   MODULE
   {
     name = Configure
     title = Life Support
     slots = 2
-
+    
     SETUP
     {
-      name = Vacuum Scrubber
+      name = Advanced Vacuum Scrubber
       desc = A dual-bed vacuum-exposing regenerative scrubber that sequesters <b>CarbonDioxide</b> from the internal atmosphere.
-      mass = 0.0
-      cost = 0
-
+      tech = improvedLifeSupport
+            
       MODULE
       {
         type = ProcessController
@@ -133,6 +133,7 @@
     {
       name = N2 Pressure Controller
       desc = Use <b>Nitrogen</b> to maintain the internal atmosphere at a comfortable pressure.
+      tech = crewSurvivability
 
       MODULE
       {
