--- a/GameData/ROCapsules/PartConfigs/DragonXL/Vader/DragonXLCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/DragonXL/Vader/DragonXLCM.cfg
@@ -1,8 +1,8 @@
 PART
 {
-	name = ROC-Dragon2CM
+	name = ROC-DragonXLCM
 	module = Part
-	author = Kartoffelkuchen, Vader111
+	author = Vader111
 
 	RSSROConfig = True
 
@@ -10,31 +10,24 @@ PART
 	//  Model and Dimensions
 	//  ============================================================================
 
-	MODEL 
+	MODEL
 	{
-		model = ROCapsules/Assets/KK/Dragon2CM
-	}
-
-	INTERNAL
-	{
-		name = ROC-Dragon2CMInterior
+		model = ROCapsules/Assets/Vader/DragonXLCM
+		scale = 1.0, 1.0, 1.0
 	}
 
 	scale = 1.0
 	rescaleFactor = 1.0
 
-	node_stack_top = 0.0, 1.88, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_bottom = 0.0, -1.600847, 0.0, 0.0, -1.0, 0.0, 3
-	node_stack_mainChutes = 0.0, 1.481525, -1.557307, 0.0, 1.0, 0.0, 2
-	node_stack_drogueCover = 0.0, 1.2, -1.0, 0.0, 1.0, 0.0, 2
-	node_stack_mainCover = 0.0, 0.0, -1.5, 0.0, 1.0, 0.0, 2
+	node_stack_top = 0.0, 6.52977, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_bottom = 0.0, -4.84952, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_solarattach1 = -2.79019, -4.70748, -0.356742, 0.0, 1.0, 0.0, 2
+	node_stack_solarattach2 = 2.79019, -4.70748, 0.356742, 0.0, -1.0, 0.0, 2
 
-	CoPOffset = 0.0, 1.0, 0.0
-	CoLOffset = 0.0, -0.5, 0.0
-	CoMOffset = 0.0, -0.25, 0.0
-	CenterOfDisplacement = 0.0, 0.5, 0.0
+	attachRules = 1,0,1,0,1
 
-	attachRules = 1,0,1,0,0
+	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
+	sound_decoupler_fire = decouple
 
 	//  ============================================================================
 	//  Title, Description, Category, Techs
@@ -45,31 +38,35 @@ PART
 	cost = 4500
 	category = Pods
 	subcategory = 0
-	title = Crew Dragon Capsule
+	title = Cargo Dragon XL Capsule
 	manufacturer = SpaceX
-	description = SpaceX’s next-generation Dragon V2 spacecraft designed to carry humans to the International Space Station and other destinations.
-	tags = Spacex, Dragon, Crew
+	description = SpaceX’s next-generation Dragon XL spacecraft designed to carry cargo & supplies to the Lunar Gateway Station and other destinations.
+	tags = Spacex, DragonXL, Gateway
 
 	vesselType = Ship
 	stagingIcon = COMMAND_POD
-	CrewCapacity = 6
+	CrewCapacity = 0
 	bulkheadProfiles = size3, size1
 
 	//  ============================================================================
 	//  Thermo, Durability
 	//  ============================================================================
 
-	mass = 6.820
+	mass = 3.1
 	dragModelType = default
+	maximum_drag = 0.2
+	minimum_drag = 0.3
+	angularDrag = 2
+	crashTolerance = 10
 	breakingForce = 250
 	breakingTorque = 250
-	maximum_drag = 0.20
-	minimum_drag = 0.15
-	angularDrag = 2
-	crashTolerance = 12
-	maxTemp = 800
-	skinMaxTemp = 3600
+	maxTemp = 773.15
+	skinMaxTemp = 773.15
 	fuelCrossFeed = True
+	emissiveConstant = 0.90
+	heatConductivity = 0.75
+	thermalMassModifier = 5
+	radiatorHeadroom = 0.5
 
 	//  ============================================================================
 	//  Modules and Resources
@@ -97,50 +94,6 @@ PART
 
 	MODULE
 	{
-		name = AdjustableCoMShifter
-		DescentModeCoM = 0, 0, 0.2
-	}
-
-	MODULE
-	{
-		name = ModuleAnimateGeneric
-		animationName = KK_SpXCD_nosecone
-		actionGUIName = Toggle Cone
-		startEventGUIName = Open Cone
-		endEventGUIName  = Close Cone
-		layer = 0
-	}
-
-	MODULE
-	{
-		name = ModuleAnimateGeneric
-		animationName = KK_SpXCD_windows
-		actionGUIName = Toggle Lights
-		startEventGUIName = Lights On
-		endEventGUIName = Lights Off
-		toggleAction = True
-		defaultActionGroup = Light
-		layer = 2
-	}
-
-	MODULE
-	{
-		name = ModuleScienceExperiment
-		experimentID = crewReport
-		experimentActionName = Crew Report
-		resetActionName = Discard Crew Report
-		reviewActionName = Review Report
-		useStaging = False
-		useActionGroups = True
-		hideUIwhenUnavailable = True
-		rerunnable = True
-		xmitDataScalar = 1.0
-		usageReqMaskInternal = 5
-		usageReqMaskExternal = -1
-	}
-
-	MODULE
-	{
 		name = ModuleScienceContainer
 		reviewActionName = Review Stored Data
 		storeActionName = Store Experiments
@@ -154,7 +107,7 @@ PART
 	{
 		name = ModuleRCSFX
 		stagingEnabled = False
-		thrusterTransformName = draco
+		thrusterTransformName = rcsThrust
 		thrusterPower = 0.4
 		enableYaw = True
 		enablePitch = True
@@ -184,54 +137,22 @@ PART
 
 	MODULE
 	{
-		name = ModuleRCSFX
-		stagingEnabled = False
-		thrusterTransformName = draco_top
-		thrusterPower = 0.4
-		enableYaw = False
-		enablePitch = False
-		enableRoll = False
-		enableX = False
-		enableY = False
-		enableZ = True
-		resourceFlowMode = STAGE_PRIORITY_FLOW
-		runningEffectName = running2
-		PROPELLANT
-		{
-			name = MMH
-			ratio = 0.5629
-		}
-		PROPELLANT
-		{
-			name = NTO
-			ratio = 0.4371
-		}
-		atmosphereCurve
-		{
-			key = 0 300
-			key = 1 100
-			key = 4 0.001
-		}
-	}
-
-	MODULE
-	{
 		name = ModuleFuelTanks
 		type = ServiceModule
-		volume = 1242
+		volume = 1200
 		basemass = -1
 		TANK
 		{
 			name = MMH
-			amount = 696
-			maxAmount = 696
+			amount = 647
+			maxAmount = 647
 			isTweakable = False
 		}
 		TANK
 		{
 			name = NTO
-			amount = 541
-			maxAmount = 541
+			amount = 502
+			maxAmount = 502
 			isTweakable = False
 		}
 		TANK
@@ -254,7 +175,7 @@ PART
 			AUDIO_MULTI
 			{
 				channel = Ship
-				transformName = draco
+				transformName = rcsThrust
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
 				volume = 0.1 0.0
@@ -267,34 +188,7 @@ PART
 			MODEL_MULTI_PARTICLE
 			{
 				modelName = Squad/FX/Monoprop_small
-				transformName = draco
-				emission = 0.0 0.0
-				emission = 0.1 0.0
-				emission = 1.0 1.0
-				speed = 0.0 0.8
-				speed = 1.0 1.0
-				localRotation = -90, 0, 0
-			}
-		}
-		running2
-		{
-			AUDIO_MULTI
-			{
-				channel = Ship
-				transformName = draco_top
-				clip = sound_rocket_mini
-				volume = 0.0 0.0
-				volume = 0.1 0.0
-				volume = 0.5 0.025
-				volume = 1.0 0.1
-				pitch = 0.0 0.75
-				pitch = 1.0 1.5
-				loop = true
-			}
-			MODEL_MULTI_PARTICLE
-			{
-				modelName = Squad/FX/Monoprop_small
-				transformName = draco_top
+				transformName = rcsThrust
 				emission = 0.0 0.0
 				emission = 0.1 0.0
 				emission = 1.0 1.0
@@ -310,7 +204,7 @@ PART
 //  Configure RealAntennas
 //  ================================================================================
 
-@PART[ROC-Dragon2CM]:BEFORE[RealAntennas]
+@PART[ROC-DragonXLCM]:BEFORE[RealAntennas]
 {
 	!MODULE[ModuleDataTransmitter],* {}
 
@@ -330,14 +224,14 @@ PART
 }
 
 //	==================================================
-//	Dragon 2 command module.
+//	Cargo Dragon command module.
 
 //	TAC Life Support compatibility.
 //	==================================================
 
-@PART[ROC-Dragon2CM]:AFTER[RealismOverhaul]:NEEDS[TacLifeSupport]
+@PART[ROC-DragonXLCM]:FOR[RealismOverhaul]:NEEDS[TacLifeSupport]
 {
-	@description ^= :$: Supports a crew of 6 for 3 days.:
+	@description ^= :$: Cargo to Support a crew of 3 for 60 days.:
 	@mass -= 0.07
 
 	@MODULE[ModuleCommand]
@@ -350,48 +244,48 @@ PART
 
 	@MODULE[ModuleFuelTanks]
 	{
-		@volume += 310
+		@volume += 3540
 
 		TANK
 		{
 			name = Food
-			amount = 110
-			maxAmount = 110
+			amount = 0
+			maxAmount = 1100
 		}
 
 		TANK
 		{
 			name = Water
-			amount = 70
-			maxAmount = 70
+			amount = 0
+			maxAmount = 700
 		}
 
 		TANK
 		{
 			name = Oxygen
-			amount = 11000
-			maxAmount = 11000
+			amount = 0
+			maxAmount = 110000
 		}
 
 		TANK
 		{
 			name = Waste
 			amount = 0
-			maxAmount = 15
+			maxAmount = 500
 		}
 
 		TANK
 		{
 			name = WasteWater
 			amount = 0
-			maxAmount = 35
+			maxAmount = 500
 		}
 
 		TANK
 		{
 			name = CarbonDioxide
 			amount = 0
-			maxAmount = 3500
+			maxAmount = 5000
 		}
 	}
 
