--- a/GameData/ROCapsules/PartConfigs/DragonXL/Vader/Kerbalism Profile.cfg
+++ b/GameData/ROCapsules/PartConfigs/DragonXL/Vader/Kerbalism Profile.cfg
@@ -1,122 +1,68 @@
-@PART[ROC-Dragon2CM]:NEEDS[RealFuels,ROCapsules]:AFTER[ROCapsules]
+@PART[ROC-DragonXLCM]:NEEDS[RealFuels,ROCapsules]:AFTER[ROCapsules]
 {
-	@description ^= :$: Supports a crew of 6 for 3 days.:
-	@mass -= 0.07
+	@description ^= :$: Cargo to Support a crew of 3 for 60 days.:
 
+	@mass -= 0.07
+	
 	@MODULE[ModuleFuelTanks]
 	{
-		@volume += 310
+		@volume += 3540
 
 		TANK
 		{
 			name = Food
-			amount = 110
-			maxAmount = 110
+			amount = 0
+			maxAmount = 1100
 		}
 
 		TANK
 		{
 			name = Water
-			amount = 70
-			maxAmount = 70
+			amount = 0
+			maxAmount = 700
 		}
 
 		TANK
 		{
 			name = Oxygen
-			amount = 11000
-			maxAmount = 11000
+			amount = 0
+			maxAmount = 110000
 		}
 
 		TANK
 		{
 			name = Nitrogen		//No idea of actual size, assuming same 1:3 ratio Nitrogen:Oxygen Orion has
-			amount = 1500
-			maxAmount = 1500
+			amount = 0
+			maxAmount = 37000
 		}
 
 		TANK
 		{
 			name = Waste
 			amount = 0
-			maxAmount = 15
+			maxAmount = 500
 		}
 
 		TANK
 		{
 			name = WasteWater
 			amount = 0
-			maxAmount = 35
+			maxAmount = 500
 		}
 	}
 }
 
-@PART[ROC-Dragon2CMLunar]:NEEDS[RealFuels,ROCapsules]:AFTER[ROCapsules]
-{
-	@description ^= :$: Supports a crew of 3 for 6 days.:
-	@mass -= 0.07
-
-	@MODULE[ModuleFuelTanks]
-	{
-		@volume += 310
-
-		TANK
-		{
-			name = Food
-			amount = 110
-			maxAmount = 110
-		}
-
-		TANK
-		{
-			name = Water
-			amount = 70
-			maxAmount = 70
-		}
-
-		TANK
-		{
-			name = Oxygen
-			amount = 11000
-			maxAmount = 11000
-		}
-
-		TANK
-		{
-			name = Nitrogen		//No idea of actual size, assuming same 1:3 ratio Nitrogen:Oxygen Orion has
-			amount = 1500
-			maxAmount = 1500
-		}
-
-		TANK
-		{
-			name = Waste
-			amount = 0
-			maxAmount = 15
-		}
-
-		TANK
-		{
-			name = WasteWater
-			amount = 0
-			maxAmount = 35
-		}
-	}
-}
-
-@PART[ROC-Dragon2CM|ROC-Dragon2CMLunar]:NEEDS[ROCapsules,FeatureHabitat]:AFTER[zzzKerbalism]
+@PART[ROC-DragonXLCM]:NEEDS[ROCapsules,FeatureHabitat]:AFTER[zzzKerbalism]
 {
 	@MODULE[Habitat]
 	{
-		%volume = 9.3
+		%volume = 10
 		%surface = 35	//guess, very similar dimensions to Orion
 		%max_pressure = 0.35
 	}
 }
 
-@PART[ROC-Dragon2CM|ROC-Dragon2CMLunar]:NEEDS[ROCapsules,FeatureScience,RP-0]:BEFORE[RP-0-Kerbalism] { %capsuleTier = Mature }
-
-@PART[ROC-Dragon2CM|ROC-Dragon2CMLunar]:NEEDS[ROCapsules,FeatureScience,RP-0]:FOR[RP-0-Kerbalism]
+@PART[ROC-DragonXLCM]:NEEDS[ROCapsules,FeatureScience,RP-0]:FOR[RP-0-Kerbalism]
 {
 	!MODULE[HardDrive] {}
 	MODULE
@@ -128,20 +74,8 @@
 	}
 }
 
-@PART[ROC-Dragon2CM|ROC-Dragon2CMLunar]:NEEDS[FeatureComfort]:FOR[Kerbalism]
-{
-  MODULE
-  {
-    name = Comfort
-    bonus = panorama
-    desc = The two windows offer a relaxing view of the void of space.
-  }
-
-  @tags ^= :$: comfort:
-}
-
 //Dragon Capsules
-@PART[ROC-Dragon2CM|ROC-Dragon2CMLunar]:NEEDS[ProfileRealismOverhaul]:AFTER[RealismOverhaul]
+@PART[ROC-DragonXLCM]:NEEDS[ProfileRealismOverhaul]:AFTER[RealismOverhaul]
 {
 	@MODULE[ModuleCommand]
 	{
