--- a/GameData/ROCapsules/PartConfigs/DragonXL/Vader/TU_Support_CargoDragonXL.cfg
+++ b/GameData/ROCapsules/PartConfigs/DragonXL/Vader/TU_Support_CargoDragonXL.cfg
@@ -1,5 +1,5 @@
 //  ============================================================================
-//	Crew Dragon Textures Unlimited Support
+//	Cargo Dragon XL Textures Unlimited Support
 //  ============================================================================
 
 @REFLECTION_CONFIG[default]:NEEDS[TexturesUnlimited]
@@ -9,14 +9,10 @@
 
 KSP_MODEL_SHADER
 {
-	name = ROC-CrewDragon1
+	name = ROC-CargoDragonXL1
 
-		model = ROCapsules/Assets/KK/Dragon2Chute1
-		model = ROCapsules/Assets/KK/Dragon2Chute2
-		model = ROCapsules/Assets/KK/Dragon2CM
-		model = ROCapsules/Assets/KK/Dragon2Cover1
-		model = ROCapsules/Assets/KK/Dragon2Cover2
-		model = ROCapsules/Assets/KK/Dragon2DP
+		model = ROCapsules/Assets/Vader/DragonXLCM
+		model = ROCapsules/Assets/Vader/DragonXLDP
 
 	MATERIAL
 	{
@@ -42,15 +38,13 @@ KSP_MODEL_SHADER
 
 KSP_MODEL_SHADER
 {
-	name = ROC-CrewDragon2
+	name = ROC-CargoDragonXL2
 
-		model = ROCapsules/Assets/KK/Dragon2SM
+		model = ROCapsules/Assets/PhoenixIndustries/DragonSP
 
 	MATERIAL
 	{
 		shader = TU/Metallic
-
-		mesh = trunk_blue
 
 		PROPERTY
 		{
