Adjust ETS part temps

--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloDecoupler.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloDecoupler.cfg
@@ -34,7 +34,8 @@ PART
 	crashTolerance = 9
 	breakingForce = 200
 	breakingTorque = 200
-	maxTemp = 1973.15
+	maxTemp = 673.15
+	skinMaxTemp = 773.15
 	fuelCrossFeed = False
 	stageOffset = 1
 	childStageOffset = 1
