--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHGABlockIII.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHGABlockIII.cfg
@@ -29,7 +29,8 @@ PART
 	minimum_drag = 0.2
 	angularDrag = 2
 	crashTolerance = 7
-	maxTemp = 1973.15
+	maxTemp = 673.15
+	skinMaxTemp = 773.15
 	PhysicsSignificance = 1
 	bulkheadProfiles = srf
 	
