--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloActiveDockingMechanism.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloActiveDockingMechanism.cfg
@@ -31,7 +31,8 @@ PART
 	crashTolerance = 8
 	breakingForce = 150
 	breakingTorque = 150
-	maxTemp = 3000
+	maxTemp = 673.15
+	skinMaxTemp = 773.15
 	fuelCrossFeed = false
 	stagingIcon = DECOUPLER_VERT
 	bulkheadProfiles = size0
