--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloMissionModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloMissionModule.cfg
@@ -31,7 +31,8 @@ PART
 	crashTolerance = 4
 	breakingForce = 200
 	breakingTorque = 200
-	maxTemp = 1973.15
+	maxTemp = 673.15
+	skinMaxTemp = 773.15
 	skinMaxTemp = 2000
 	vesselType = Ship
 	bulkheadProfiles = size2
