--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloSolar.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloSolar.cfg
@@ -25,7 +25,8 @@ PART
 	minimum_drag = 0.2
 	angularDrag = 1
 	crashTolerance = 8
-	maxTemp = 1200 // = 3200
+	maxTemp = 673.15
+	skinMaxTemp = 773.15
 	bulkheadProfiles = srf
 	thermalMassModifier = 2.0
 	emissiveConstant = 0.95
