Don't give BigG a DataTransmitter with RA either
RA only converts ModuleDataTransmitter into a ModuleRealAntenna on
parts that also have a ModuleCommand, which BigG doesn't.

No idea what giving it a ModuleCommand would do, so simply not giving
it a MDT is the simple fix

--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiCabin.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiCabin.cfg
@@ -150,7 +150,7 @@ PART
 		}
 	}
 
-	MODULE:NEEDS[!RemoteTech]
+	MODULE:NEEDS[!RemoteTech,!RealAntennas]
 	{
 		name = ModuleDataTransmitter
 		antennaType = INTERNAL
