Fix CST Nosecone Model and fix up a bunch of issues.

--- a/GameData/ROCapsules/PartConfigs/CST/CSTCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTCM.cfg
@@ -27,15 +27,19 @@ PART
 	rescaleFactor = 1.24
 	
 	node_stack_bottom = 0.0, -0.9 , 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_top_1 = 0.0, 1.28, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_top_2 = 0.0, 0.78775, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_top = 0.0, 1.28, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_parachute = 0.0, 0.78775, 0.0, 0.0, 1.0, 0.0, 2
+
 	CoPOffset = 0.0, 0.5, 0.0
 	CoLOffset = 0.0, -0.45, 0.0
 	CoMOffset = 0.0, -1.0, 0.0
+
+	buoyancy = 1.5
+	buoyancyUseSine = False
 	
-	TechRequired = commandModules
-	entryCost = 10000
-	cost = 4500
+	TechRequired = unlockParts
+	cost = 150
+	entryCost = 1
 	category = Pods
 	subcategory = 0
 	title = CST-100 Command Module
@@ -51,8 +55,11 @@ PART
 	minimum_drag = 0.15
 	angularDrag = 2
 	crashTolerance = 12
-	maxTemp = 673.15
-	skinMaxTemp = 773.15
+	maxTemp = 973.15
+	skinMaxTemp = 2673.15
+	emissiveConstant = 0.6
+	thermalMassModifier = 1.0
+	skinMassPerArea = 4
 	vesselType = Ship
 	CrewCapacity = 7
 	bulkheadProfiles = size3, size1
@@ -63,13 +70,14 @@ PART
 	{
 		rcs
 		{
-			AUDIO
+			AUDIO_MULTI_POOL
 			{
 				channel = Ship
+				transformName = RCS
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
-				volume = 0.1 0.0
-				volume = 0.5 0.025
+				volume = 0.02 0.1
+				volume = 0.5 0.1
 				volume = 1.0 0.1
 				pitch = 0.0 0.75
 				pitch = 1.0 1.5
@@ -117,7 +125,7 @@ PART
 	MODULE
 	{
 		name = AdjustableCoMShifter
-		DescentModeCoM = 0.0, 0.0, 0.3
+		DescentModeCoM = 0.0, 0.0, -0.3
 	}
 	
 	MODULE
@@ -148,11 +156,12 @@ PART
 	MODULE
 	{
 		name = ModuleRCSFX
+		stagingEnabled = True
 		thrusterTransformName = RCS
 		thrusterPower = 0.445
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = rcs
-		
+
 		PROPELLANT
 		{
 			name = Hydrazine
@@ -206,12 +215,6 @@ PART
 			amount = 1500
 			maxAmount = 1500
 		}
-	}
-	
-	MODULE
-	{
-		name = FlagDecal
-		textureQuadName = flagTransform
 	}
 }
 
