--- a/GameData/ROCapsules/PartConfigs/CST/CSTHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTHS.cfg
@@ -4,23 +4,23 @@ PART
 	module = Part
 	author = Hanson Ma, Colton Franke, VoidCosmos, Drakenex, zer0Kerbal, capkirk
 	RSSROConfig = True
-	
+
 	MODEL
 	{
 		model = ROCapsules/Assets/CST/cstHeatShield/model
 	}
-	
+
 	scale = 1.0
 	rescaleFactor = 1.24
-	
+
 	node_stack_bottom = 0.0, -0.3 , 0.0, 0.0, -1.0, 0.0, 2
 	node_stack_top = 0.0, -0.041 , 0.0, 0.0, 1.0, 0.0, 2
 
-	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
-	
-	TechRequired = heavyAerodynamics
-	entryCost = 1800
-	cost = 900
+	fx_gasBurst_white = 0.0, -0.041, 0.0, 0.0, 1.0, 0.0, decouple
+
+	TechRequired = unlockParts
+	cost = 150
+	entryCost = 1
 	category = Thermal
 	subcategory = 0
 	title = CST-100 Heat Shield
@@ -36,29 +36,47 @@ PART
 	breakingForce = 200
 	breakingTorque = 200
 	crashTolerance = 12
-	maxTemp = 773.15
-	skinMaxTemp = 2773.15
+	maxTemp = 1500
+	skinMaxTemp = 2600
 	fuelCrossFeed = False
 	PhysicsSignificance = 0
 	stageOffset = 1
 	childStageOffset = 1
 	stagingIcon = DECOUPLER_HOR
 	bulkheadProfiles = size3
-	
+
 	tags = starliner, boeing, cst100, cst-100, 100
-	
+
+	//use new heat shield tagging system to configure the shield instead
+	heatShieldDiameter  = 4.56
 	heatShieldTag = LEO
-	heatShieldDiameter = 4.56
-	resetHeatShieldMass = true
 	resetHeatShieldAblator = true
+	resetHeatShieldMass = true
 	emissiveConstant = 0.6
 	thermalMassModifier = 1.0
 	skinMassPerArea = 4
 
 	MODULE
 	{
+		name = ModuleLiftingSurface
+		useInternalDragModel = False
+		deflectionLiftCoeff = 1.4
+		liftingSurfaceCurve = CapsuleBottom
+		disableBodyLift = False
+		omnidirectional = False
+		perpendicularOnly = True
+		transformDir = Y
+		transformSign = -1
+		nodeEnabled = True
+		attachNodeName = bottom
+	}
+
+	MODULE
+	{
 		name = ModuleDecouple
+		menuName = Jettison Heat Shield
 		ejectionForce = 5
+		isOmniDecoupler = false
 		explosiveNodeID = top
 	}	
 }
