--- a/GameData/ROCapsules/PartConfigs/CST/CSTNDSPassive.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTNDSPassive.cfg
@@ -17,9 +17,9 @@ PART
 	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1
 	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, 0.0
 	
-	TechRequired = advMetalworks
-	entryCost = 7500
-	cost = 350
+	TechRequired = unlockParts
+	cost = 150
+	entryCost = 1
 	category = Coupling
 	subcategory = 0
 	title = NASA Docking System (Passive)
@@ -35,8 +35,11 @@ PART
 	breakingForce = 250
 	breakingTorque = 250
 	crashTolerance = 12
-	maxTemp = 473.15
-	skinMaxTemp = 473.15
+	maxTemp = 673.15
+	skinMaxTemp = 773.15
+	emissiveConstant = 0.6
+	thermalMassModifier = 1.0
+	skinMassPerArea = 4
 	bulkheadProfiles = size1, srf
 	
 	tags = starliner, boeing, cst100, cst-100, 100, nasa docking system, nds
@@ -61,4 +64,12 @@ PART
 		stagingEnabled = False
 	}
 
+}
+
+@PART[ROC-CSTNDSPassive]:AFTER[FerramAerospaceResearch]
+{
+	@MODULE[GeometryPartModule]
+	{
+		%forceUseMeshes = True
+	}
 }
