--- a/GameData/ROCapsules/PartConfigs/CST/CSTParachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTParachute.cfg
@@ -18,9 +18,9 @@ PART
 
 	sound_parachute_open = activate
 
-	TechRequired = landing
-	entryCost = 4600
-	cost = 850
+	TechRequired = unlockParts
+	cost = 150
+	entryCost = 1
 	category = Utility
 	subcategory = 0
 	title = CST-100 Parachute Pack
@@ -32,9 +32,9 @@ PART
 	dragModelType = default
 	angularDrag = .1
 	crashTolerance = 10
-	maxTemp = 673.15
-	skinMaxTemp = 773.15
-	emissiveConstant = 0.7
+	emissiveConstant = 0.6
+	thermalMassModifier = 1.0
+	skinMassPerArea = 4
 	breakingForce = 100
 	breakingTorque = 50
 	bodyLiftMultiplier = 0
@@ -154,6 +154,12 @@ PART
 
 @PART[ROC-CSTParachute]:AFTER[zzzRealismOverhaul]
 {
+	@maxTemp = 973.15
+	@skinMaxTemp = 2673.15
+}
+
+@PART[ROC-CSTParachute]:AFTER[zzzRealismOverhaul]
+{
 	// RO forces all RealChuteModules to minDeploy 5000, deploy 1000,
 	// Get back our historical numbers
 	@MODULE[RealChuteModule]
@@ -164,4 +170,12 @@ PART
 			@deploymentAlt = 3350
 		}
 	}	 
+}
+
+@PART[ROC-CSTParachute]:AFTER[FerramAerospaceResearch]
+{
+	@MODULE[GeometryPartModule]
+	{
+		%forceUseMeshes = True
+	}
 }
