--- a/GameData/ROCapsules/PartConfigs/CST/CSTSM.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTSM.cfg
@@ -15,12 +15,12 @@ PART
 	
 	node_stack_top = 0.0, 0.273, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_bottom = 0.0, -1.15, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_bottom_2 = 0.0, -0.75, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_engine = 0.0, -0.75, 0.0, 0.0, -1.0, 0.0, 1
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 	
-	sound_decoupler_fire = decouple
-	TechRequired = largeVolumeContainment
-	entryCost = 2200
+	TechRequired = unlockParts
+	cost = 150
+	entryCost = 1
 	cost = 500
 	category = FuelTank
 	subcategory = 0
@@ -37,13 +37,13 @@ PART
 	crashTolerance = 10
 	breakingForce = 250
 	breakingTorque = 250
-	maxTemp = 473.15
-	skinMaxTemp = 573.15
+	maxTemp = 673.15
+	skinMaxTemp = 773.15
 	fuelCrossFeed = True
 	bulkheadProfiles = size1, size3
-	emissiveConstant = 0.90
-	heatConductivity = 0.75
-	thermalMassModifier = 5
+	emissiveConstant = 0.6 // not too absorptive for reentry
+    thermalMassModifier = 1.0
+    skinMassPerArea = 2.0
 	radiatorHeadroom = 0.5
 	
 	tags = starliner, boeing, cst100, cst-100, 100
@@ -52,13 +52,14 @@ PART
 	{
 		rcs
 		{
-			AUDIO
+			AUDIO_MULTI_POOL
 			{
 				channel = Ship
+				transformName = RCS
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
-				volume = 0.1 0.0
-				volume = 0.5 0.025
+				volume = 0.02 0.1
+				volume = 0.5 0.1
 				volume = 1.0 0.1
 				pitch = 0.0 0.75
 				pitch = 1.0 1.5
@@ -81,18 +82,21 @@ PART
 	MODULE
 	{
 		name = ModuleDecouple
+		menuName = Jettison Service Module
 		ejectionForce = 15
+		isOmniDecoupler = false
 		explosiveNodeID = top
 	}
 	
 	MODULE
 	{
 		name = ModuleRCSFX
+		stagingEnabled = True
 		thrusterTransformName = RCS
 		thrusterPower = 0.44
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = rcs
-		
+
 		PROPELLANT
 		{
 			name = MMH
