--- a/GameData/ROCapsules/PartConfigs/CST/CSTNoseCone.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTNoseCone.cfg
@@ -14,14 +14,14 @@ PART
 	scale = 1
 	rescaleFactor = 2.15
 	
-	node_stack_bottom = 0.0, -0.17209, 0.0, 0.0, -1.0, 0.0, 1
-	fx_gasBurst_white = 0.0, -0.2, 0.0, 0.0, 1.0, 0.0, decouple
+	node_stack_bottom = 0.0, 0.09535, 0.0, 0.0, -1.0, 0.0, 1
 	
+	fx_gasBurst_white = 0.0, -0.09535, 0.0, 0.0, 1.0, 0.0, decouple
 	sound_decoupler_fire = decouple
 	
-	TechRequired = advAerodynamics
-	entryCost = 1500
-	cost = 100
+	TechRequired = unlockParts
+	cost = 150
+	entryCost = 1
 	category = Aero
 	subcategory = 0
 	title = CST-100 Nose Cone
@@ -33,16 +33,20 @@ PART
 	dragModelType = default
 	maximum_drag = 0.1
 	minimum_drag = 0.1
-	angularDrag = .5
+	angularDrag = 0.5
 	crashTolerance = 14
 	breakingForce = 100
 	breakingTorque = 100
-	maxTemp = 573.15
-	skinMaxTemp = 673.15
+	maxTemp = 973.15
+	skinMaxTemp = 1073.15
+	emissiveConstant = 0.6
+	thermalMassModifier = 1.0
+	skinMassPerArea = 4
 	fuelCrossFeed = False
-	stagingIcon = DECOUPLER_HOR
+	PhysicsSignificance = 0
 	stageOffset = 1
 	chilStageOffset = 1
+	stagingIcon = DECOUPLER_HOR
 	bulkheadProfiles = size1
 	
 	tags = starliner, boeing, cst100, cst-100, 100
@@ -50,8 +54,17 @@ PART
 	MODULE
 	{
 		name = ModuleDecouple
-		ejectionForce = 2.5
+		menuName = Jettison Nose Cone
+		ejectionForce = 10
+		isOmniDecoupler = false
 		explosiveNodeID = bottom
 	}
-	
+}
+
+@PART[ROC-CSTNoseCone]:AFTER[FerramAerospaceResearch]
+{
+	@MODULE[GeometryPartModule]
+	{
+		%forceUseMeshes = True
+	}
 }
