--- a/GameData/ROCapsules/PartConfigs/CST/CSTRS88.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTRS88.cfg
@@ -15,18 +15,9 @@ PART
 	
 	node_stack_top = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 1
 	
-	fx_exhaustFlame_blue_small = 0.0, -3.0, 0.0, 0.0, 1.0, 0.0, running
-	fx_exhaustLight_blue = 0.0, -3.0, 0.0, 0.0, 0.0, 1.0, running
-	fx_smokeTrail_light = 0.0, -3.0, 0.0, 0.0, 1.0, 0.0, running
-	fx_exhaustSparks_flameout = 0.0, -3.0, 0.0, 0.0, 1.0, 0.0, flameout
-	sound_vent_medium = engage
-	sound_rocket_hard = running
-	sound_vent_soft = disengage
-	sound_explosion_low = flameout
-	
-	TechRequired = heavierRocketry
-	entryCost = 1600
-	cost = 200
+	TechRequired = unlockParts
+	cost = 150
+	entryCost = 1
 	category = Engine
 	subcategory = 0
 	title = RS-88
@@ -78,6 +69,5 @@ PART
 		}
 
 		!CONFIG,*:HAS[~name[LAE]]{}
-		
 	}
 }
