--- a/GameData/ROCapsules/PartConfigs/CST/TU_Support_CST.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/TU_Support_CST.cfg
@@ -8,7 +8,7 @@ KSP_MODEL_SHADER
 	
 	model = ROCapsules/Assets/CST/RS88/model
 	
-	TEXTURE
+	MATERIAL
 	{
 		shader = TU/Metallic
 		
@@ -35,14 +35,13 @@ KSP_MODEL_SHADER
 	name = ROC-CSTCM
 	
 	model = ROCapsules/Assets/CST/commandModule/model
-	model = ROCapsules/Assets/CST/cstHeatShield/model
 	model = ROCapsules/Assets/CST/cstParachute/model
 	model = ROCapsules/Assets/CST/noseCone/CST101_CAP
 	model = ROCapsules/Assets/CST/serviceModule/model
 	model = ROCapsules/Assets/CST/nds/NDS1/ndsport1
 	model = ROCapsules/Assets/CST/nds/NDS3/ndsport3
 	
-	TEXTURE
+	MATERIAL
 	{
 		shader = TU/Metallic
 		
