Add Apollo Block III+ Service Module & Apollo Block IV Engine Plus fixes for other issues.

--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloActiveDockingMechanism.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloActiveDockingMechanism.cfg
@@ -37,7 +37,7 @@ PART
 	stagingIcon = DECOUPLER_VERT
 	bulkheadProfiles = size0
 
-	tags = berth capture connect couple dock fasten join moor socket Apollo Kane block ?2 ?3 ?4 ?5 ?ii ?iii ?iv ?v aardv skylab hokulani
+	tags = apollo, block-III, block-3, block-V, block-5, eyes turned skyward
 
 	MODULE
 	{
