--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+.cfg
@@ -59,7 +59,7 @@ PART
 	category = Pods
 	subcategory = 0
 	
-	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v
+	tags = apollo, block-III, block-3, block-V, block-5, eyes turned skyward
 	
 	TechRequired = improvedCapsules
 	cost = 150
@@ -494,13 +494,14 @@ PART
 	{
 		running
 		{
-			AUDIO
+			AUDIO_MULTI_POOL
 			{
 				channel = Ship
+				transformName = RCSthruster
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
-				volume = 0.1 0.0
-				volume = 0.5 0.025
+				volume = 0.02 0.1
+				volume = 0.5 0.1
 				volume = 1.0 0.1
 				pitch = 0.0 0.75
 				pitch = 1.0 1.5
@@ -643,6 +644,24 @@ PART
 		}
 	}
 }
+
+//  ================================================================================
+//	Configure RealAntennas
+//  ================================================================================
+// Four omnidirectional S-band antennas on the CM were used when the attitude of the CSM kept the high-gain antenna from being pointed at Earth. These antennas were also used between SM jettison and landing.
+// https://en.wikipedia.org/wiki/Apollo_command_and_service_module#Communications_system
+
+@PART[ROC-ApolloCMBlockIII]:BEFORE[RealAntennas]
+{
+	!MODULE[ModuleDataTransmitter],* {}
+	MODULE
+	{
+		name = ModuleRealAntenna
+		referenceGain = 3.0		//Guess based on Block II
+		RFBand = S		//Default to S-band
+	}
+}
+
 //	================================================================================
 //	Final Pass to Make Sure TAC does not add extra resources
 //	================================================================================
