--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloDecoupler.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloDecoupler.cfg
@@ -41,7 +41,7 @@ PART
 	childStageOffset = 1
 	bulkheadProfiles = size2
 
-	tags = break decouple separate split stack stag Apollo block ?1 ?2 ?3 ?4 ?5 ?i ?ii ?iii ?iv ?v
+	tags = apollo, block-III, block-3, block-V, block-5, eyes turned skyward
 
 	MODULE
 	{
