--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHGABlockIII.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHGABlockIII.cfg
@@ -34,7 +34,7 @@ PART
 	PhysicsSignificance = 1
 	bulkheadProfiles = srf
 	
-	tags = aerial antenna radio signal transmit comm communicat dish Apollo Kane block ?3 ?4 ?iii ?iv aardv
+	tags = apollo, block-III, block-3, eyes turned skyward
 	
 	MODULE
 	{
@@ -76,6 +76,12 @@ PART
 	}
 }
 
+//  ================================================================================
+//	Configure RealAntennas
+//  ================================================================================
+// A steerable unified S-band high-gain antenna for long-range communications with Earth was mounted on the aft bulkhead.
+// https://en.wikipedia.org/wiki/Apollo_command_and_service_module#Communications_system
+
 @PART[ROC-ApolloHGABlockIII]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
 {
 	!MODULE[ModuleDataTransmitter],* {}
@@ -83,11 +89,6 @@ PART
 	{
 		name = ModuleRealAntenna
 		antennaDiameter = 0.9	//Guess, no documentation
-	}
-	MODULE
-	{
-		name = ModuleRealAntenna
-		referenceGain = 3.0		//Guess based on Block II
-		RFBand = S
+		RFBand = S	//Default to S-band
 	}
 }
