--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHGABlockV.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHGABlockV.cfg
@@ -8,7 +8,7 @@
 	@MODEL
 	{
 		@model = ROCapsules/Assets/BDB/bluedog_Apollo_Block5_HGA
-		%rotation = 0.0, -60.0, 0.0
+		%rotation = 0.0, 135.0, 0.0
 	}
 	%RSSROConfig = True
 	@rescaleFactor = 1.5646
@@ -16,13 +16,24 @@
 
 	%TechRequired = commandModules
 	
-	%tags = aerial antenna radio signal transmit comm communicat dish Apollo Kane block ?5 ?v
+	%tags = apollo, block-V, block-5, eyes turned skyward
+
+	@MODULE[ModuleAnimateGeneric]
+	{
+		@animationName = deploy
+	}
 
 	@MODULE[ModuleRTAntenna]:NEEDS[RemoteTech]
 	{
 		@Mode1OmniRange *= 2
 	}
 }
+
+//  ================================================================================
+//	Configure RealAntennas
+//  ================================================================================
+// A steerable unified S-band high-gain antenna for long-range communications with Earth was mounted on the aft bulkhead.
+// https://en.wikipedia.org/wiki/Apollo_command_and_service_module#Communications_system
 
 @PART[ROC-ApolloHGABlockV]:BEFORE[RealAntennas]
 {
@@ -31,11 +42,6 @@
 	{
 		name = ModuleRealAntenna
 		antennaDiameter = 1.5	//Guess, no documentation
-	}
-	MODULE
-	{
-		name = ModuleRealAntenna
-		referenceGain = 3.0		//Guess based on Block II
-		RFBand = S
+		RFBand = S	//Default to S-band
 	}
 }
