--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockIII.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockIII.cfg
@@ -1,32 +1,43 @@
 PART
 {
-	name = ROC-ApolloEngineBlockIII
 	module = Part
+	name = ROC-ApolloEngineBlockIII
 	author = CobaltWolf
+
+	category = Engine
+	subcategory = 0
+	RSSROConfig = true
+	RP0conf = true
+
+	crashTolerance = 10
+	maxTemp = 673.15
+	skinTemp = 773.15
+	fuelCrossfeed = true
+	breakingForce = 10000
+	breakingTorque = 10000
+
+	//  ============================================================================
+	//	Update Below
+	//  ============================================================================
+
 	MODEL
 	{
 		model = ROCapsules/Assets/BDB/bluedog_Apollo_Block3_ServiceEngine
 		rotation = 0.0, -90.0, 0.0
 	}
-	RSSROConfig = True
+
 	scale = 1
 	rescaleFactor = 1.6047
-	
-	// definition format is Position X, Position Y, Position Z, Up X, Up Y, Up Z
 	node_stack_top = 0.0, 0.038, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_top2 = 0.0, 0.038, 0.0, 0.0, -1.0, 0.0, 2
 	node_stack_bottom = 0.0, -0.84, 0.0, 0.0, -1.0, 0.0, 2
- 
-	TechRequired = orbitalRocketry1976
-	entryCost = 700
-	cost = 160
-	category = Engine
-	subcategory = 0
+	// stack, srfAttach, allowStack, allowSrfAttach, allowCollision
+	attachRules = 1,0,1,1,0
+
 	title = Apollo Block III Service Engine (LMAE)
 	manufacturer = Bell / Rocketdyne
 	description = With the decreased weight and LEO operation design, there was no longer a need for a large engine to power the CSM. NASA decided to reuse the successful Lunar Module Ascent Engine. FICTIONAL (Eyes Turned Skyward)
-	attachRules = 1,0,1,1,0
-	mass = 0.0979
+
 	heatConductivity = 0.06 // half default
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.8 // engine nozzles are good at radiating.
@@ -34,106 +45,22 @@ PART
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
-	crashTolerance = 7
-	breakingForce = 200
-	breakingTorque = 200
-	maxTemp = 673.15
-	skinTemp = 773.15
-	bulkheadProfiles = size2
-	stagingIcon = LIQUID_ENGINE
 
-	tags = lander orbit (poodle propuls rocket Apollo Kane ets block ?3 ?4 ?iii ?iv aardv
+	tags = apollo, block-III, block-3, lmae, eyes turned skyward
 
 	engineType = LMAE
-	
-	EFFECTS
-	{
-		running
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_rocket_mini
-				volume = 0.0 0.0
-				volume = 1.0 0.5
-				pitch = 0.0 0.5
-				pitch = 1.0 1.0
-				loop = true
-			}
-			MODEL_MULTI_PARTICLE
-			{
-				modelName = Squad/FX/Monoprop_big
-				transformName = thrustTransform
-				emission = 0.0 0.0
-				emission = 0.4 0.8
-				emission = 1.0 1.0
-				speed = 0.0 0.8
-				speed = 1.0 1.0
-				//localOffset = 0, 0, 1
-			}
-		}
-		control
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_rocket_mini
-				volume = 0.0 0.0
-				volume = 0.1 0.0
-				volume = 0.5 0.025
-				volume = 1.0 0.1
-				pitch = 0.0 0.75
-				pitch = 1.0 1.5
-				loop = true
-			}
-			MODEL_MULTI_PARTICLE
-			{
-				modelName = Squad/FX/Monoprop_small
-				transformName = RCSthruster
-				emission = 0.0 0.0
-				emission = 0.1 0.0
-				emission = 1.0 1.0
-				speed = 0.0 0.8
-				speed = 1.0 1.0
-				localRotation = -90, 0, 0
-			}
-		}		
-		engage
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_vent_soft
-				volume = 1.0
-				pitch = 2.0
-				loop = false
-			}
-		}
-		flameout
-		{
-			PREFAB_PARTICLE
-			{
-				prefabName = fx_exhaustSparks_flameout_2
-				transformName = FXTransform
-				oneShot = true
-			}
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_explosion_low
-				volume = 1.0
-				pitch = 2.0
-				loop = false
-			}
-		}	
-	}
-	
+	stagingIcon = LIQUID_ENGINE
+	stageOffset = 1
+	childStageOffset = 1
+
+	TechRequired = unlockParts
+	cost = 150
+	entryCost = 1
+
 	MODULE
 	{
 		name = ModuleEnginesRF
 		thrustVectorTransformName = thrustTransform
-		exhaustDamage = True
-		ignitionThreshold = 0.1
 	}
 
 	MODULE
@@ -142,27 +69,22 @@ PART
 		thrustProviderModuleIndex = 0
 		fxMax = 0.6
 		maxDistance = 30
-		falloff = 1.5
+		falloff = 1.7
 		thrustTransformName = thrustTransform
 	}
 
 	MODULE
 	{
-		name = ModuleJettison
-		jettisonName = fairing
-		bottomNodeName = bottom
-		isFairing = True
-		jettisonedObjectMass = 0.5
-		jettisonForce = 15
-		jettisonDirection = 0 0 1
+		name = ModuleB9DisableTransform
+		transform = fairing
 	}
-	
+
 	MODULE
 	{
 		name = FXModuleAnimateThrottle
 		animationName = LEM_spsA_Emit_Anim
 		dependOnEngineState = True
-		responseSpeed = .05
+		responseSpeed = 0.05
 	}
 }
 
@@ -173,7 +95,7 @@ PART
 	@title = Apollo Block III Service Engine (LMAE)
 	%manufacturer = Bell / Rocketdyne
 	@description = With the decreased weight and LEO operation design, there was no longer a need for a large engine to power the CSM. NASA decided to reuse the successful Lunar Module Ascent Engine. FICTIONAL (Eyes Turned Skyward)
-	
+
 	MODULE
 	{
 		name = ModuleGimbal
@@ -192,33 +114,34 @@ PART
 {
 	PLUME
 	{
-		name = Hypergolic-OMS-White
+		name = Hypergolic_UpperRed
 		transformName = thrustTransform
-		plumePosition = 0.0, 0.0, 0.25
-		plumeScale = 0.3
-		flarePosition = 0.0, 0.0, 0.1
-		flareScale = 0.4
-		smokePosition = 0.0, 0.0, 0.0
-		smokeScale = 1.0
-		slagPosition = 0.0, 0.0, 0.0
-		slagScale = 1.0
-		localRotation = 0.0, 0.0, 0.0
-		emissionMult = 0.5
-		energy = 1.0
-		speed = 1.0
+		localRotation = 0,0,0
+		localPosition = 0,0,0
+		energy = 1
+		speed = 1
+
+		flarePosition = 0,0,-0.3
+		flareScale = 0.2
+
+		fumePosition = 0,0,0.3
+		fumeScale = 1.25
+
+		streamPosition = 0,0,0.2
+		streamScale = 1.0
 	}
 
 	@MODULE[ModuleEngines*]
 	{
-		%powerEffectName = Hypergolic-OMS-White
-		!runningEffectName = NULL
+		%powerEffectName = Hypergolic_UpperRed
+		!runningEffectName = DELETE
 	}
 
 	@MODULE[ModuleEngineConfigs]
 	{
 		@CONFIG,*
 		{
-			%powerEffectName = Hypergolic-OMS-White
+			%powerEffectName = Hypergolic_UpperRed
 		}
 	}
 }
