--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloMissionModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloMissionModule.cfg
@@ -33,10 +33,10 @@ PART
 	breakingTorque = 200
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
-	skinMaxTemp = 2000
 	vesselType = Ship
 	bulkheadProfiles = size2
-	tags = base cabin outpost passenger station tour tuna Apollo orbital mission module block ?3 ?iii
+
+	tags = apollo, block-III, block-3, block-V, block-5, eyes turned skyward
 	
 	INTERNAL
 	{
@@ -111,7 +111,8 @@ PART
 	@TechRequired = composites
 	@entryCost = 1400
 	@cost = 10000
-	%tags = base cabin (can outpost passenger statio tour tuna Apollo Kane orbital mission module block ?4 ?iii
+
+	%tags = apollo, block-III, block-3, block-V, block-5, eyes turned skyward
 
 	@MODULE[ModuleFuelTanks]
 	{
