--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloSolar.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloSolar.cfg
@@ -31,7 +31,8 @@ PART
 	thermalMassModifier = 2.0
 	emissiveConstant = 0.95
 	heatConductivity = 0.04 // 1/3 the default
-	tags = array charge deploy e/c elect energ extend generat (light photo power solar sun track unfold volt watt Apollo Kane block ?5 ?v
+
+	tags = apollo, block-V, block-5, eyes turned skyward
 	
 	MODULE
 	{
