Fix up LEO & Lunar Heatshields.

--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryHS.cfg
@@ -39,12 +39,12 @@ PART
 	breakingForce = 200
 	breakingTorque = 200
 	crashTolerance = 9
-	maxTemp = 3300
+	maxTemp = 1500
+	skinMaxTemp = 2600
 	fuelCrossFeed = False
 	PhysicsSignificance = 0
 	stageOffset = -1
 	childStageOffset = 1
-	thermalMassModifier = 1.0
 	bulkheadProfiles = size1
 	stagingIcon = WHEEL //DECOUPLER_VERT
 
@@ -64,8 +64,11 @@ PART
 	}
 
 	//use new heat shield tagging system to configure the shield instead
-	resetHeatShieldMass = True
-	resetHeatShieldAblator = True
-	heatShieldTag = LEO
 	heatShieldDiameter = 1.89
+	heatShieldTag = LEO
+	resetHeatShieldAblator = true
+	resetHeatShieldMass = true
+	emissiveConstant = 0.6
+	thermalMassModifier = 1.0
+	skinMassPerArea = 4
 }
