--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiHS.cfg
@@ -34,19 +34,23 @@ PART
 	breakingForce = 72
 	breakingTorque = 72
 	crashTolerance = 18
+	maxTemp = 1500
+	skinMaxTemp = 2600
 	fuelCrossFeed = False
 	stageOffset = 1
 	childStageOffset = 1
-	thermalMassModifier = 1.0
 	bulkheadProfiles = size1p2
 
 	tags = gemini heat shield heatshield reentry
 
 	//use new heat shield tagging system to configure the shield instead
-	resetHeatShieldMass = True
-	resetHeatShieldAblator = True
-	heatShieldTag = LEO
 	heatShieldDiameter = 2.2
+	heatShieldTag = LEO
+	resetHeatShieldAblator = true
+	resetHeatShieldMass = true
+	emissiveConstant = 0.6
+	thermalMassModifier = 1.0
+	skinMassPerArea = 4
 
 	MODULE
 	{
