Add Missing Textures & Fix some issues

--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiOAMS.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiOAMS.cfg
@@ -204,7 +204,7 @@ PART
 	{
 		name = ModuleEnginesRF
 		thrustVectorTransformName = thrustTransform
-		EngineType = LiquidEngine
+		EngineType = LiquidFuel
 		runningEffectName = runningRCS
 	}
 
